# django-bookstore-app

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
books/: admin.py  models.py  tests.py  views.py
books/migrations/: 0001_initial.py  0002_review.py  0003_alter_book_options.py
bookstore_management/: asgi.py  settings.py  urls.py  wsgi.py
pages/: tests.py  views.py
static/css/: base.css
static/js/: base.js
templates/: _base.html  about.html  home.html
templates/account/: login.html  logout.html  signup.html
templates/books/: book_detail.html  book_list.html
templates/registration/: login.html  signup.html
